[package]
authors = ["Alexander Gonzalez <alexfertel97@gmail.com>"]
version = "0.7.3"
name = "bulloak"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/alexfertel/bulloak"
homepage = "https://github.com/alexfertel/bulloak"
documentation = "https://github.com/alexfertel/bulloak"
description = """
A Solidity test generator based on the Branching Tree Technique.
"""
keywords = ["solidity", "testing", "compiler", "cli", "tree"]
categories = [
  "development-tools::testing",
  "command-line-utilities",
  "compilers",
  "parsing",
]
exclude = ["/.github/*"]

[[bin]]
path = "src/main.rs"
name = "bulloak"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.19", features = ["derive"] }
figment = "0.10.19"
forge-fmt = "0.2.0"
indexmap = "2.0.0"
once_cell = "1.18.0"
owo-colors = "3.5.0"
regex = "1.10.2"
serde = "1.0.203"
solang-parser = "0.3.2"
thiserror = "1.0.61"
unicode-xid = "0.2.4"
# Security patch
zerocopy = "0.7.31"

[dev-dependencies]
pretty_assertions = { version = "1.4.0" }
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
