[workspace]
resolver = "2"
members = [
  "crates/bulloak",
  "crates/core",
  # "crates/foundry",
  # "crates/syntax",
]

[workspace.package]
authors = ["Alexander Gonzalez <alexfertel97@gmail.com>"]
version = "0.7.4"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/alexfertel/bulloak"
homepage = "https://github.com/alexfertel/bulloak"
documentation = "https://github.com/alexfertel/bulloak"
description = """
A Solidity test generator based on the Branching Tree Technique.
"""
keywords = ["solidity", "testing", "compiler", "cli", "tree"]
categories = [
  "development-tools::testing",
  "command-line-utilities",
  "compilers",
  "parsing",
]
exclude = ["/.github/*"]
