[workspace]
resolver = "2"
members = ["crates/bulloak", "crates/foundry", "crates/syntax"]

[workspace.package]
authors = ["Alexander Gonzalez <alexfertel97@gmail.com>"]
version = "0.9.1"
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/alexfertel/bulloak"
homepage = "https://github.com/alexfertel/bulloak"
documentation = "https://github.com/alexfertel/bulloak"
description = """
A Solidity test generator based on the Branching Tree Technique.
"""
keywords = ["solidity", "testing", "compiler", "cli", "tree"]
categories = [
  "development-tools::testing",
  "command-line-utilities",
  "compilers",
  "parsing",
]
exclude = ["/.github/*"]

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
rust_2021_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = "warn"
all = "warn"

[workspace.dependencies]
bulloak-syntax = { path = "crates/syntax", version = "0.9.0" }
bulloak-foundry = { path = "crates/foundry", version = "0.9.0" }

anyhow = "1.0.75"
clap = { version = "4.3.19", features = ["derive"] }
criterion = "0.5.1"
figment = "0.10.19"
forge-fmt = "0.2.0"
indexmap = "2.0.0"
once_cell = "1.18.0"
owo-colors = "3.5.0"
pretty_assertions = { version = "1.4.0" }
regex = "1.10.2"
serde = "1.0.203"
solang-parser = "0.3.2"
thiserror = "1.0.61"
unicode-xid = "0.2.4"
