[package]
name = "bulloak-backend"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Core traits for bulloak backends"
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true

[lints]
workspace = true
