[package]
name = "bulloak"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme = "./README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bulloak-syntax.workspace = true
bulloak-foundry.workspace = true

anyhow.workspace = true
clap.workspace = true
figment.workspace = true
forge-fmt.workspace = true
owo-colors.workspace = true
serde.workspace = true
glob = "0.3.2"

[dev-dependencies]
pretty_assertions.workspace = true
criterion.workspace = true

[[bench]]
name = "bench"
harness = false

[lints]
workspace = true
