[package]
name = "bulloak-foundry"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme = "./README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bulloak-syntax.workspace = true

anyhow.workspace = true
forge-fmt.workspace = true
indexmap.workspace = true
once_cell.workspace = true
owo-colors.workspace = true
regex.workspace = true
solang-parser.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3.19.1"

[lints]
workspace = true
