[package]
name = "bulloak-noir"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bulloak-syntax.workspace = true
anyhow.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
