[package]
name = "bulloak-syntax"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
readme = "./README.md"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
unicode-xid.workspace = true

[dev-dependencies]
indoc = "2.0.5"
pretty_assertions.workspace = true
criterion.workspace = true

[[bench]]
name = "syntax"
harness = false

[lints]
workspace = true
